src/hci/src/script_hci/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> command NEWLINE
Rule 4     statement -> DEV command NEWLINE
Rule 5     statement -> NEWLINE
Rule 6     statement -> error NEWLINE
Rule 7     command -> FOR ID ASSIGN expr TO expr optstep optlvlinc
Rule 8     command -> FOR ID ASSIGN error TO expr optstep optlvlinc
Rule 9     command -> FOR ID ASSIGN expr TO error optstep optlvlinc
Rule 10    command -> FOR ID ASSIGN expr TO expr STEP error
Rule 11    command -> IF boolexpr optlvlinc
Rule 12    command -> IF expr optlvlinc
Rule 13    command -> IF error optlvlinc
Rule 14    command -> optlvldec ELSE IF boolexpr optlvlinc
Rule 15    command -> optlvldec ELSE IF error optlvlinc
Rule 16    command -> optlvldec ELSE optlvlinc
Rule 17    command -> WHILE boolexpr optlvlinc
Rule 18    command -> WHILE bool optlvlinc
Rule 19    command -> WHILE error optlvlinc
Rule 20    command -> ADD_DEV ID expr
Rule 21    command -> ADD_DEV ID error
Rule 22    command -> CMD
Rule 23    command -> CMD paramlist
Rule 24    command -> CMD error
Rule 25    command -> WAIT expr
Rule 26    command -> WAIT error
Rule 27    command -> ID ASSIGN expr
Rule 28    command -> ID ASSIGN error
Rule 29    command -> STEPIN
Rule 30    command -> STEPOUT
Rule 31    command -> PRINT expr
Rule 32    optstep -> STEP expr
Rule 33    optstep -> empty
Rule 34    optlvlinc -> STEPIN
Rule 35    optlvlinc -> empty
Rule 36    optlvldec -> STEPOUT
Rule 37    optlvldec -> empty
Rule 38    boolexpr -> relexpr
Rule 39    boolexpr -> boolexpr AND boolexpr
Rule 40    boolexpr -> boolexpr OR boolexpr
Rule 41    boolexpr -> NOT boolexpr
Rule 42    relexpr -> expr LT expr
Rule 43    relexpr -> expr LTE expr
Rule 44    relexpr -> expr GT expr
Rule 45    relexpr -> expr GTE expr
Rule 46    relexpr -> expr EQUAL expr
Rule 47    relexpr -> expr NOTEQUAL expr
Rule 48    expr -> expr PLUS expr
Rule 49    expr -> expr MINUS expr
Rule 50    expr -> expr MUL expr
Rule 51    expr -> expr DIV expr
Rule 52    expr -> expr MOD expr
Rule 53    expr -> expr POWER expr
Rule 54    expr -> expr BITWISEAND expr
Rule 55    expr -> expr BITWISEOR expr
Rule 56    expr -> expr BITWISEXOR expr
Rule 57    expr -> expr BITWISELS INT
Rule 58    expr -> expr BITWISERS INT
Rule 59    expr -> BITWISENOT expr
Rule 60    expr -> INT
Rule 61    expr -> FLOAT
Rule 62    expr -> STR
Rule 63    expr -> ID
Rule 64    expr -> bool
Rule 65    expr -> LPAREN expr RPAREN
Rule 66    expr -> MINUS expr
Rule 67    bool -> TRUE
Rule 68    bool -> FALSE
Rule 69    paramlist -> paramlist SEP param
Rule 70    paramlist -> param
Rule 71    param -> expr
Rule 72    param -> boolexpr
Rule 73    empty -> <empty>

Terminals, with rules where they appear

ADD_DEV              : 20 21
AND                  : 39
ASSIGN               : 7 8 9 10 27 28
BITWISEAND           : 54
BITWISELS            : 57
BITWISENOT           : 59
BITWISEOR            : 55
BITWISERS            : 58
BITWISEXOR           : 56
CMD                  : 22 23 24
DEV                  : 4
DIV                  : 51
ELSE                 : 14 15 16
EQUAL                : 46
FALSE                : 68
FLOAT                : 61
FOR                  : 7 8 9 10
GT                   : 44
GTE                  : 45
ID                   : 7 8 9 10 20 21 27 28 63
IF                   : 11 12 13 14 15
INT                  : 57 58 60
LPAREN               : 65
LT                   : 42
LTE                  : 43
MINUS                : 49 66
MOD                  : 52
MUL                  : 50
NEWLINE              : 3 4 5 6
NOT                  : 41
NOTEQUAL             : 47
OR                   : 40
PLUS                 : 48
POWER                : 53
PRINT                : 31
RPAREN               : 65
SEP                  : 69
STEP                 : 10 32
STEPIN               : 29 34
STEPOUT              : 30 36
STR                  : 62
TO                   : 7 8 9 10
TRUE                 : 67
WAIT                 : 25 26
WHILE                : 17 18 19
error                : 6 8 9 10 13 15 19 21 24 26 28

Nonterminals, with rules where they appear

bool                 : 18 64
boolexpr             : 11 14 17 39 39 40 40 41 72
command              : 3 4
empty                : 33 35 37
expr                 : 7 7 8 9 10 10 12 20 25 27 31 32 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59 65 66 71
optlvldec            : 14 15 16
optlvlinc            : 7 8 9 11 12 13 14 15 16 17 18 19
optstep              : 7 8 9
param                : 69 70
paramlist            : 23 69
program              : 1 0
relexpr              : 38
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . command NEWLINE
    (4) statement -> . DEV command NEWLINE
    (5) statement -> . NEWLINE
    (6) statement -> . error NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD paramlist
    (24) command -> . CMD error
    (25) command -> . WAIT expr
    (26) command -> . WAIT error
    (27) command -> . ID ASSIGN expr
    (28) command -> . ID ASSIGN error
    (29) command -> . STEPIN
    (30) command -> . STEPOUT
    (31) command -> . PRINT expr
    (36) optlvldec -> . STEPOUT
    (37) optlvldec -> . empty
    (73) empty -> .

    DEV             shift and go to state 5
    NEWLINE         shift and go to state 4
    error           shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 73 (empty -> .)

    program                        shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . command NEWLINE
    (4) statement -> . DEV command NEWLINE
    (5) statement -> . NEWLINE
    (6) statement -> . error NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD paramlist
    (24) command -> . CMD error
    (25) command -> . WAIT expr
    (26) command -> . WAIT error
    (27) command -> . ID ASSIGN expr
    (28) command -> . ID ASSIGN error
    (29) command -> . STEPIN
    (30) command -> . STEPOUT
    (31) command -> . PRINT expr
    (36) optlvldec -> . STEPOUT
    (37) optlvldec -> . empty
    (73) empty -> .

    DEV             shift and go to state 5
    NEWLINE         shift and go to state 4
    error           shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 73 (empty -> .)

    statement                      shift and go to state 19
    command                        shift and go to state 3
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 2

    (2) program -> statement .

    DEV             reduce using rule 2 (program -> statement .)
    NEWLINE         reduce using rule 2 (program -> statement .)
    error           reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    ADD_DEV         reduce using rule 2 (program -> statement .)
    CMD             reduce using rule 2 (program -> statement .)
    WAIT            reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    STEPIN          reduce using rule 2 (program -> statement .)
    STEPOUT         reduce using rule 2 (program -> statement .)
    PRINT           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    ELSE            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> command . NEWLINE

    NEWLINE         shift and go to state 20


state 4

    (5) statement -> NEWLINE .

    DEV             reduce using rule 5 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> NEWLINE .)
    error           reduce using rule 5 (statement -> NEWLINE .)
    FOR             reduce using rule 5 (statement -> NEWLINE .)
    IF              reduce using rule 5 (statement -> NEWLINE .)
    WHILE           reduce using rule 5 (statement -> NEWLINE .)
    ADD_DEV         reduce using rule 5 (statement -> NEWLINE .)
    CMD             reduce using rule 5 (statement -> NEWLINE .)
    WAIT            reduce using rule 5 (statement -> NEWLINE .)
    ID              reduce using rule 5 (statement -> NEWLINE .)
    STEPIN          reduce using rule 5 (statement -> NEWLINE .)
    STEPOUT         reduce using rule 5 (statement -> NEWLINE .)
    PRINT           reduce using rule 5 (statement -> NEWLINE .)
    $end            reduce using rule 5 (statement -> NEWLINE .)
    ELSE            reduce using rule 5 (statement -> NEWLINE .)


state 5

    (4) statement -> DEV . command NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD paramlist
    (24) command -> . CMD error
    (25) command -> . WAIT expr
    (26) command -> . WAIT error
    (27) command -> . ID ASSIGN expr
    (28) command -> . ID ASSIGN error
    (29) command -> . STEPIN
    (30) command -> . STEPOUT
    (31) command -> . PRINT expr
    (36) optlvldec -> . STEPOUT
    (37) optlvldec -> . empty
    (73) empty -> .

    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 73 (empty -> .)

    command                        shift and go to state 21
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 6

    (6) statement -> error . NEWLINE

    NEWLINE         shift and go to state 22


state 7

    (7) command -> FOR . ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> FOR . ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> FOR . ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> FOR . ID ASSIGN expr TO expr STEP error

    ID              shift and go to state 23


state 8

    (27) command -> ID . ASSIGN expr
    (28) command -> ID . ASSIGN error

    ASSIGN          shift and go to state 24


state 9

    (11) command -> IF . boolexpr optlvlinc
    (12) command -> IF . expr optlvlinc
    (13) command -> IF . error optlvlinc
    (38) boolexpr -> . relexpr
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . NOT boolexpr
    (48) expr -> . expr PLUS expr
    (49) expr -> . expr MINUS expr
    (50) expr -> . expr MUL expr
    (51) expr -> . expr DIV expr
    (52) expr -> . expr MOD expr
    (53) expr -> . expr POWER expr
    (54) expr -> . expr BITWISEAND expr
    (55) expr -> . expr BITWISEOR expr
    (56) expr -> . expr BITWISEXOR expr
    (57) expr -> . expr BITWISELS INT
    (58) expr -> . expr BITWISERS INT
    (59) expr -> . BITWISENOT expr
    (60) expr -> . INT
    (61) expr -> . FLOAT
    (62) expr -> . STR
    (63) expr -> . ID
    (64) expr -> . bool
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (42) relexpr -> . expr LT expr
    (43) relexpr -> . expr LTE expr
    (44) relexpr -> . expr GT expr
    (45) relexpr -> . expr GTE expr
    (46) relexpr -> . expr EQUAL expr
    (47) relexpr -> . expr NOTEQUAL expr
    (67) bool -> . TRUE
    (68) bool -> . FALSE

    error           shift and go to state 27
    NOT             shift and go to state 29
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    boolexpr                       shift and go to state 25
    expr                           shift and go to state 26
    relexpr                        shift and go to state 28
    bool                           shift and go to state 36

state 10

    (14) command -> optlvldec . ELSE IF boolexpr optlvlinc
    (15) command -> optlvldec . ELSE IF error optlvlinc
    (16) command -> optlvldec . ELSE optlvlinc

    ELSE            shift and go to state 40


state 11

    (17) command -> WHILE . boolexpr optlvlinc
    (18) command -> WHILE . bool optlvlinc
    (19) command -> WHILE . error optlvlinc
    (38) boolexpr -> . relexpr
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . NOT boolexpr
    (67) bool -> . TRUE
    (68) bool -> . FALSE
    (42) relexpr -> . expr LT expr
    (43) relexpr -> . expr LTE expr
    (44) relexpr -> . expr GT expr
    (45) relexpr -> . expr GTE expr
    (46) relexpr -> . expr EQUAL expr
    (47) relexpr -> . expr NOTEQUAL expr
    (48) expr -> . expr PLUS expr
    (49) expr -> . expr MINUS expr
    (50) expr -> . expr MUL expr
    (51) expr -> . expr DIV expr
    (52) expr -> . expr MOD expr
    (53) expr -> . expr POWER expr
    (54) expr -> . expr BITWISEAND expr
    (55) expr -> . expr BITWISEOR expr
    (56) expr -> . expr BITWISEXOR expr
    (57) expr -> . expr BITWISELS INT
    (58) expr -> . expr BITWISERS INT
    (59) expr -> . BITWISENOT expr
    (60) expr -> . INT
    (61) expr -> . FLOAT
    (62) expr -> . STR
    (63) expr -> . ID
    (64) expr -> . bool
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr

    error           shift and go to state 43
    NOT             shift and go to state 29
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30

    boolexpr                       shift and go to state 41
    bool                           shift and go to state 42
    relexpr                        shift and go to state 28
    expr                           shift and go to state 44

state 12

    (20) command -> ADD_DEV . ID expr
    (21) command -> ADD_DEV . ID error

    ID              shift and go to state 45


state 13

    (22) command -> CMD .
    (23) command -> CMD . paramlist
    (24) command -> CMD . error
    (69) paramlist -> . paramlist SEP param
    (70) paramlist -> . param
    (71) param -> . expr
    (72) param -> . boolexpr
    (48) expr -> . expr PLUS expr
    (49) expr -> . expr MINUS expr
    (50) expr -> . expr MUL expr
    (51) expr -> . expr DIV expr
    (52) expr -> . expr MOD expr
    (53) expr -> . expr POWER expr
    (54) expr -> . expr BITWISEAND expr
    (55) expr -> . expr BITWISEOR expr
    (56) expr -> . expr BITWISEXOR expr
    (57) expr -> . expr BITWISELS INT
    (58) expr -> . expr BITWISERS INT
    (59) expr -> . BITWISENOT expr
    (60) expr -> . INT
    (61) expr -> . FLOAT
    (62) expr -> . STR
    (63) expr -> . ID
    (64) expr -> . bool
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (38) boolexpr -> . relexpr
    (39) boolexpr -> . boolexpr AND boolexpr
    (40) boolexpr -> . boolexpr OR boolexpr
    (41) boolexpr -> . NOT boolexpr
    (67) bool -> . TRUE
    (68) bool -> . FALSE
    (42) relexpr -> . expr LT expr
    (43) relexpr -> . expr LTE expr
    (44) relexpr -> . expr GT expr
    (45) relexpr -> . expr GTE expr
    (46) relexpr -> . expr EQUAL expr
    (47) relexpr -> . expr NOTEQUAL expr

    NEWLINE         reduce using rule 22 (command -> CMD .)
    error           shift and go to state 47
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    NOT             shift and go to state 29
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    paramlist                      shift and go to state 46
    param                          shift and go to state 48
    expr                           shift and go to state 49
    boolexpr                       shift and go to state 50
    bool                           shift and go to state 36
    relexpr                        shift and go to state 28

state 14

    (25) command -> WAIT . expr
    (26) command -> WAIT . error
    (48) expr -> . expr PLUS expr
    (49) expr -> . expr MINUS expr
    (50) expr -> . expr MUL expr
    (51) expr -> . expr DIV expr
    (52) expr -> . expr MOD expr
    (53) expr -> . expr POWER expr
    (54) expr -> . expr BITWISEAND expr
    (55) expr -> . expr BITWISEOR expr
    (56) expr -> . expr BITWISEXOR expr
    (57) expr -> . expr BITWISELS INT
    (58) expr -> . expr BITWISERS INT
    (59) expr -> . BITWISENOT expr
    (60) expr -> . INT
    (61) expr -> . FLOAT
    (62) expr -> . STR
    (63) expr -> . ID
    (64) expr -> . bool
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (67) bool -> . TRUE
    (68) bool -> . FALSE

    error           shift and go to state 52
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    expr                           shift and go to state 51
    bool                           shift and go to state 36

state 15

    (29) command -> STEPIN .

    NEWLINE         reduce using rule 29 (command -> STEPIN .)


state 16

    (30) command -> STEPOUT .
    (36) optlvldec -> STEPOUT .

    NEWLINE         reduce using rule 30 (command -> STEPOUT .)
    ELSE            reduce using rule 36 (optlvldec -> STEPOUT .)


state 17

    (31) command -> PRINT . expr
    (48) expr -> . expr PLUS expr
    (49) expr -> . expr MINUS expr
    (50) expr -> . expr MUL expr
    (51) expr -> . expr DIV expr
    (52) expr -> . expr MOD expr
    (53) expr -> . expr POWER expr
    (54) expr -> . expr BITWISEAND expr
    (55) expr -> . expr BITWISEOR expr
    (56) expr -> . expr BITWISEXOR expr
    (57) expr -> . expr BITWISELS INT
    (58) expr -> . expr BITWISERS INT
    (59) expr -> . BITWISENOT expr
    (60) expr -> . INT
    (61) expr -> . FLOAT
    (62) expr -> . STR
    (63) expr -> . ID
    (64) expr -> . bool
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (67) bool -> . TRUE
    (68) bool -> . FALSE

    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    expr                           shift and go to state 53
    bool                           shift and go to state 36

state 18

    (37) optlvldec -> empty .

    ELSE            reduce using rule 37 (optlvldec -> empty .)


state 19

    (1) program -> program statement .

    DEV             reduce using rule 1 (program -> program statement .)
    NEWLINE         reduce using rule 1 (program -> program statement .)
    error           reduce using rule 1 (program -> program statement .)
    FOR             reduce using rule 1 (program -> program statement .)
    IF              reduce using rule 1 (program -> program statement .)
    WHILE           reduce using rule 1 (program -> program statement .)
    ADD_DEV         reduce using rule 1 (program -> program statement .)
    CMD             reduce using rule 1 (program -> program statement .)
    WAIT            reduce using rule 1 (program -> program statement .)
    ID              reduce using rule 1 (program -> program statement .)
    STEPIN          reduce using rule 1 (program -> program statement .)
    STEPOUT         reduce using rule 1 (program -> program statement .)
    PRINT           reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)
    ELSE            reduce using rule 1 (program -> program statement .)


state 20

    (3) statement -> command NEWLINE .

    DEV             reduce using rule 3 (statement -> command NEWLINE .)
    NEWLINE         reduce using rule 3 (statement -> command NEWLINE .)
    error           reduce using rule 3 (statement -> command NEWLINE .)
    FOR             reduce using rule 3 (statement -> command NEWLINE .)
    IF              reduce using rule 3 (statement -> command NEWLINE .)
    WHILE           reduce using rule 3 (statement -> command NEWLINE .)
    ADD_DEV         reduce using rule 3 (statement -> command NEWLINE .)
    CMD             reduce using rule 3 (statement -> command NEWLINE .)
    WAIT            reduce using rule 3 (statement -> command NEWLINE .)
    ID              reduce using rule 3 (statement -> command NEWLINE .)
    STEPIN          reduce using rule 3 (statement -> command NEWLINE .)
    STEPOUT         reduce using rule 3 (statement -> command NEWLINE .)
    PRINT           reduce using rule 3 (statement -> command NEWLINE .)
    $end            reduce using rule 3 (statement -> command NEWLINE .)
    ELSE            reduce using rule 3 (statement -> command NEWLINE .)


state 21

    (4) statement -> DEV command . NEWLINE

    NEWLINE         shift and go to state 54


state 22

    (6) statement -> error NEWLINE .
